@@ -221,8 +221,15 @@ abstract class Maintenance {
 		if( $this->mQuiet ) {
 			return;
 		}
-		$out = preg_replace( '/\n\z/', '', $out );
-		$this->outputChanneled( $out, $channel );
+		if ( $channel === null ) {
+			$f = fopen( 'php://stdout', 'w' );
+			fwrite( $f, $out );
+			fclose( $f );
+		}
+		else {
+			$out = preg_replace( '/\n\z/', '', $out );
+			$this->outputChanneled( $out, $channel );
+		}
 	}
 
 	/**
